[gd_scene load_steps=8 format=3 uid="uid://dgi4ymythq8up"]

[ext_resource type="Script" path="res://Game/GameScene.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://ceh34ox6344m8" path="res://Assets/art/misc/blank_grey.png" id="2"]

[sub_resource type="Shader" id="1"]
code = "shader_type canvas_item;

uniform vec2 direction = vec2(1, 0);
uniform float speed = 0.1;
uniform sampler2D noise;

vec4 overlay(vec4 base, vec4 blend){
	vec4 limit = step(0.5, base);
	return mix(2.0 * base * blend, 1.0 - 2.0 * (1.0 - base) * (1.0 - blend), limit);
}

void fragment()
{
	// image texture
	vec4 base = texture(TEXTURE, UV);
	// noise texture
	vec4 blend = texture(noise, mod(UV + ( direction * speed * TIME), vec2(1.0, 1.0)));
	
	COLOR = overlay(base, blend);
}"

[sub_resource type="Gradient" id="Gradient_iussi"]
colors = PackedColorArray(0, 0, 0, 1, 0.18343, 0.1794, 0.26, 1)

[sub_resource type="FastNoiseLite" id="3"]

[sub_resource type="NoiseTexture2D" id="4"]
seamless = true
color_ramp = SubResource("Gradient_iussi")
noise = SubResource("3")

[sub_resource type="ShaderMaterial" id="2"]
shader = SubResource("1")
shader_parameter/direction = Vector2(0.5, 1)
shader_parameter/speed = 0.02
shader_parameter/noise = SubResource("4")

[node name="GameScene" type="Node2D"]
script = ExtResource("1")

[node name="BackgroundEffect" type="CanvasLayer" parent="."]
layer = -1

[node name="BackgroundNoise" type="TextureRect" parent="BackgroundEffect"]
modulate = Color(0.141176, 0.160784, 0.247059, 1)
show_behind_parent = true
material = SubResource("2")
offset_right = 1155.0
offset_bottom = 647.0
texture = ExtResource("2")
expand_mode = 1

[node name="Canvas" type="CanvasLayer" parent="."]

[node name="GameOver" type="VBoxContainer" parent="Canvas"]
process_mode = 3
visible = false
offset_left = 429.0
offset_top = 28.0
offset_right = 615.0
offset_bottom = 575.0
alignment = 1

[node name="GameOverText" type="RichTextLabel" parent="Canvas/GameOver"]
layout_mode = 2
bbcode_enabled = true
text = "Game Over!"

[node name="Restart" type="Button" parent="Canvas/GameOver"]
layout_mode = 2
text = "Try Again"

[node name="MenuButton" type="Button" parent="Canvas/GameOver"]
layout_mode = 2
text = "Main Menu"

[node name="Victory" type="Panel" parent="Canvas"]
process_mode = 3
visible = false
self_modulate = Color(0.360784, 0.34902, 0.364706, 0.611765)
offset_left = 398.0
offset_top = 28.0
offset_right = 648.0
offset_bottom = 320.0

[node name="Victory" type="VBoxContainer" parent="Canvas/Victory"]
layout_mode = 0
offset_left = 12.0
offset_top = 14.0
offset_right = 233.0
offset_bottom = 519.0

[node name="VictoryText" type="RichTextLabel" parent="Canvas/Victory/Victory"]
layout_mode = 2
bbcode_enabled = true
text = "VICTORY"

[node name="VictoryText2" type="RichTextLabel" parent="Canvas/Victory/Victory"]
layout_mode = 2
bbcode_enabled = true
text = "Thank you so much for playing.

The full game will not end here... it'll have more bosses, more weapons, and hopefully, more fun.

please for the love of all that is holy, help us out and complete this survey
*INSERT SURVEY HERE*"

[node name="VictoryText3" type="RichTextLabel" parent="Canvas/Victory/Victory"]
layout_mode = 2
bbcode_enabled = true
text = "



WISHLIST ON STEAM"

[node name="VictoryMainMenu" type="Button" parent="Canvas/Victory/Victory"]
layout_mode = 2
text = "Main Menu"

[node name="BossOverlay" type="VBoxContainer" parent="Canvas"]
visible = false
offset_left = 11.0
offset_top = 11.0
offset_right = 1012.0
offset_bottom = 51.0

[node name="BossHealthBar" type="ProgressBar" parent="Canvas/BossOverlay"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
value = 100.0

[node name="BossName" type="RichTextLabel" parent="Canvas/BossOverlay"]
layout_mode = 2
bbcode_enabled = true
text = "BOSS NAME"

[node name="GameBoard" type="Node2D" parent="." groups=["gameboard"]]

[connection signal="pressed" from="Canvas/GameOver/Restart" to="." method="_on_Restart_pressed"]
[connection signal="pressed" from="Canvas/GameOver/MenuButton" to="." method="_on_MenuButton_pressed"]
[connection signal="pressed" from="Canvas/Victory/Victory/VictoryMainMenu" to="." method="_on_VictoryMainMenu_pressed"]
